# cirquil

./: .gitignore  Cargo.toml  cdm16.circ
.github/workflows/: ci.yml  rolling-release.yml
src/: circuit.rs  lib.rs  main.rs  test_canvas.rs  test_converter.rs  test_propagate.rs
src/circuit/: component.rs
src/core/: canvas.rs  circuit.rs  component.rs  components.rs  graphics.rs  location.rs  mod.rs  pin.rs  project.rs  property.rs  value.rs  wire.rs
src/core/canvas/: circuit.rs  component.rs  location.rs  mod.rs  wire.rs
src/core/compiler/: circuit.rs  dfs.rs  mod.rs  project.rs
src/core/components/: clock_generator.rs  mod.rs
src/core/simulation/: circuit.rs  component.rs  mod.rs  pin.rs  probe.rs  project.rs  property.rs  trace.rs  wire.rs  workbench.rs
src/core/uuid/: mod.rs
src/core/value/: mod.rs  operations.rs
src/editor/: app.rs  mod.rs  project.rs
src/editor/canvas/: grid.rs  mod.rs
src/editor/tools/: circuit.rs  component.rs  cursors.rs  mod.rs  tool.rs  tree.rs
src/gui/: app.rs  as_shapes.rs  component.rs  constants.rs  grid.rs  location.rs  mesh.rs  mod.rs  probe.rs  value.rs
src/gui/components/: clock_generator.rs  mod.rs  tunnel.rs
src/headless/: files.rs  mod.rs
src/logisim/: mod.rs
src/logisim/converter/: circuit.rs  component.rs  dfs.rs  mod.rs
src/logisim/parser/: appear.rs  circ_anchor.rs  circ_port.rs  circuit.rs  component.rs  location.rs  mod.rs  project.rs  rect.rs  (+1 more)
src/player/: app.rs  circuit.rs  clock.rs  csv.rs  file.rs  instrument.rs  mod.rs  osc.rs  place_probe.rs  probe_location.rs  project.rs  replay.rs  trace.rs  workbench.rs
src/serde/: csv.rs  fs.rs  mod.rs  project.rs  replay.rs  workbench.rs
tests/: test_propagate.rs
(+31 files in other folders)
