[lib]
crate-type = ["rlib"]

[package]
name = "cirquil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[[bin]]
name = "player"
path = "src/bin/player.rs"

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.117"
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = "0.24.2"
