[lib]
crate-type = ["rlib"]

[package]
name = "cirquil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[[bin]]
name = "player"
path = "src/bin/player.rs"

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.117"
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = "0.25.0"
winapi = { version = "0.3.9", features = ["winuser"] }
rfd = "0.14.1"
uuid = { version = "1.8.0", features = ["v4", "v6", "v7", "fast-rng", "macro-diagnostics", "serde"] }
csv = "1.3.0"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
